--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "engines": {
-    "node": "^10.13 || 12 || 14 || 15",
+    "node": ">=16",
     "npm": ">=6"
   },
   "dependencies": {
@@ -27,6 +27,7 @@
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
+    "gh-pages": "6.3.0",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
@@ -36,6 +37,8 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "craco test",
     "lint": "eslint .",
     "lint:fix": "eslint --fix src/",
@@ -72,5 +75,6 @@
       "Firefox ESR",
       "not ie < 11"
     ]
-  }
+  },
+  "homepage": "https://Rocksampath12.github.io/prime-video"
 }
